Add new sidebar icons, homepage photo, and style tweaks

--- a/content/thanks.html
+++ b/content/thanks.html
@@ -16,7 +16,7 @@
   <p>
     Several individuals also supported the work in various ways, including Dr Obadiah Ngigi as 
     principal collaborator and partner, Dr Andrew Williams, Dr Stefano Mazzilli, Brian Harding, 
-    Robin Patel, Jules Roberts, Fraser Brown, Robert Wild, Tadg Keating Webb, Michael Houghton & Joseph Harkins. 
+    Jules Roberts, Fraser Brown, Robert Wild, Tadg Keating Webb, Michael Houghton & Joseph Harkins. 
   </p>
 
   <p>
