--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </li>
       <li>
         <a href="#insight" data-section="insight" class="icon-text">
-          <img src="assets/icons/methodology.svg" alt="Approach" class="lucide-icon">
+          <img src="assets/icons/lightbulb.svg" alt="Insight" class="lucide-icon">
           <span class="label">Insight</span>
         </a>
       </li>
@@ -67,7 +67,7 @@
       </li>
       <li>
         <a href="#solutions" data-section="solutions" class="icon-text">
-          <img src="assets/icons/book-open.svg" alt="Case Studies" class="lucide-icon">
+          <img src="assets/icons/puzzle.svg" alt="Solutions" class="lucide-icon">
           <span class="label">Solutions</span>
         </a>
       </li>
@@ -81,7 +81,7 @@
       
       <li>
         <a href="#thanks" data-section="thanks" class="icon-text">
-          <img src="assets/icons/info.svg" alt="Thanks" class="lucide-icon">
+          <img src="assets/icons/heart-handshake.svg" alt="Thanks" class="lucide-icon">
           <span class="label">Thanks</span>
         </a>
       </li>
