--- a/content/home.html
+++ b/content/home.html
@@ -7,6 +7,9 @@ linking finance to environmental sustainability.">
   <section>
   <h2>How to pay for healthy ecosystems?</h2>
   <p>
+
+
+
     Ecosystem Equity was created to explore sustainable financial incentives 
     for maintenance and restoration of healthy and productive ecosystems, 
     including farmland, fisheries, forests and rangelands.
@@ -17,7 +20,7 @@ linking finance to environmental sustainability.">
   <p>
   Eco-credit is a loan that adds an obligation for ecological restoration 
   alongside repayment of principal and interest. The intention is that 
-  ecological restoration action, as a term of the loan agreement, balances 
+  ecological restoration, as a term of the loan agreement, balances 
   ecological damage caused by the financed activity. The eco-credit approach, and other 
   tools we developed, have been adopted and used by 
   <a href="https://greenfi.org" target="_blank" rel="noopener">Greenfi.org</a>, 
@@ -29,7 +32,7 @@ linking finance to environmental sustainability.">
   and Tree Fundi (still under development).
 </p>
 
- 
+  <img src="assets/images/hand.png" alt="Productive landscape">
 
   <h3>Recognition</h3>
   <p>
