Update text in content/home.html

--- a/content/home.html
+++ b/content/home.html
@@ -10,8 +10,8 @@ linking finance to environmental sustainability.">
 
 
 
-    Ecosystem Equity was created to explore sustainable financial incentives 
-    for maintenance and restoration of healthy and productive ecosystems, 
+    Ecosystem Equity was created to explore new paradigms for financing 
+    maintenance and restoration of healthy and productive ecosystems, 
     including farmland, fisheries, forests and rangelands.
   </p>
 
