Ensure all site files and path updates are included for GitHub Pages

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,10 @@
     please contact us via LinkedIn.
   </p>
 
-
+  <p>
+    This website does not collect personal data or use cookies. 
+    
+  </p>
   <p>
     <a href="#home" data-section="home" class="cta-link">
       Home
