--- a/home.html
+++ b/home.html
@@ -7,14 +7,17 @@ linking finance to environmental sustainability.">
   <section>
   <h2>How to pay for healthy ecosystems?</h2>
   <p>
-
-
-
-    Ecosystem Equity was created to explore new paradigms for financing 
-    maintenance and restoration of healthy and productive ecosystems, 
-    including farmland, fisheries, forests and rangelands.
+    Ecosystem Equity was created to explore sustainable financial incentives 
+    for maintenance and restoration of healthy and productive ecosystems, 
+    including farmland, fisheries, forests and rangelands. 
   </p>
-
+  <p>  
+    This work led us to consider how information about value creation, as well as real resoures, 
+    flow through an economy. We started looking for ways to integrate financial and environmental wealth, 
+    and then to ask how banks might be reimagined, not just as guardians and builders of financial wealth 
+    but of environmental and social capital too.
+  </p>
+    <img src="assets/images/bank.jpg" alt="Future Bank">
  
   <h3>Our chief contribution is "eco-credit"</h3>
   <p>
@@ -32,7 +35,7 @@ linking finance to environmental sustainability.">
   and Tree Fundi (still under development).
 </p>
 
-  <img src="assets/images/hand.png" alt="Productive landscape">
+  <img src="assets/images/hand.png" alt="Local Finance">
 
   <h3>Recognition</h3>
   <p>
