--- a/solutions.html
+++ b/solutions.html
@@ -34,6 +34,7 @@ as commercial and community finance, linking loans with ecological restoration t
     agri-lenders where profit margins are not the objective, hence community eco-credit. </p>
 
   <h3>Community Eco-Credit</h3>
+  <img src="assets/images/hand.png" alt="Local Finance">
   <p>
     We adapted eco-credit for informal financial self-help groups, which count hundreds of millions, perhaps billions, of members worldwide. 
     Our focus is groups of 20–30 people with no access to formal finance. Each is capitalised with $1,000–$1,500, held in a simple revolving fund, often a tin box with a padlock. 
