--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@ linking finance to environmental sustainability.">
     including farmland, fisheries, forests and rangelands. 
   </p>
   <p>  
-    This work led us to consider how information about value creation, as well as real resoures, 
+    This work led us to consider how information about value creation, as well as real resources, 
     flow through an economy. We started looking for ways to integrate financial and environmental wealth, 
     and then to ask how banks might be reimagined, not just as guardians and builders of financial wealth 
     but of environmental and social capital too.
