--- a/solutions.html
+++ b/solutions.html
@@ -39,9 +39,9 @@ as commercial and community finance, linking loans with ecological restoration t
     We adapted eco-credit for informal financial self-help groups, which count hundreds of millions, perhaps billions, of members worldwide. 
     Our focus is groups of 20–30 people with no access to formal finance. Each is capitalised with $1,000–$1,500, held in a simple revolving fund, often a tin box with a padlock. 
     Members borrow on condition of small environmental actions, like planting trees or adopting sustainable practices. 
-    <a href=https://www.greenfi.org/ target="_blank">This is now operated through Greenfi</a>. The result was catalysing a first wave of green instruments for communities highly dependent on natural resources yet excluded from conventional finance. 
+    <a href=https://www.greenfi.org/ target="_blank">This is now operated as the Greenfi.org project</a>. The result was catalysing a first wave of green instruments for communities highly dependent on natural resources yet excluded from conventional finance. 
     These are experimental, and a variety of organisations are experimenting 
-    with local adaptations to the rails for a model we set down and in a growing ecosytem of innovation,
+    with local adaptations to the rails for a model we set down and in a growing ecosystem of innovation,
     <a href="assets/docs/localgreenfinanceinstruments.pdf" target="_blank">explained in this deck</a>.
   </p>
 
