Updated credit regulation section and hyperlinks

--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@ linking finance to environmental sustainability.">
   </p>
   <p>  
     This work led us to consider how information about value creation, as well as real resources, 
-    flow through an economy. We started looking for ways to integrate financial and environmental wealth, 
-    and then to ask how banks might be reimagined, not just as guardians and builders of financial wealth 
-    but of environmental and social capital too.
+    flow through an economy. We explored how to integrate financial and environmental values, 
+    and asked how banks might be reimagined as guardians and builders not only of financial wealth 
+    but of natural capital too.
   </p>
     <img src="assets/images/bank.jpg" alt="Future Bank">
  
@@ -40,8 +40,8 @@ linking finance to environmental sustainability.">
   <h3>Recognition</h3>
   <p>
     Ecosystem Equity's work has been recognised with several awards and prizes, 
-    including the United Nations / Morgan Stanley Global Prize for Climate 
-    Change Finance Innovation, Global Innovation Lab for Climate Finance, 
+    including the United Nations/Morgan Stanley Global Prize for Climate 
+    Change Finance Innovation, Climaate Policy Initiatve's Global Innovation Lab for Climate Finance, 
     a SwissRe ReSource Prize, a Mastercard Zambezi Innovation Prize, 
     a ClimateKIC Award and a Conservation Finance Alliance Prize.
   </p>
