--- a/insight.html
+++ b/insight.html
@@ -15,21 +15,23 @@
   </p>
 
   <p>
-    Yet in practice, <strong>credit operates as a de facto licence</strong>.
-    Access to credit decides which projects go ahead, and in that sense,
-    <strong>credit criteria determine what and who is licensed to shape the future</strong>.
+    Yet in practice, <strong>credit operates as a de facto licence.</strong> 
+    Access to credit decides which projects are resourced and go ahead. 
+    In that sense, <strong>credit criteria and the committees that apply them determine what 
+    and who is licensed to shape the future</strong>. 
+    The credit process is therefore fundamental in determining our trajectory towards or away from sustainability.
   </p>
 
   <p>
-    This system contributed to the creation of modern prosperity by 
-    steering resources to where they could be used most efficiently. 
-    At the same time, because credit criteria rarely included environmental considerations, 
-    financial wealth expanded through the overuse of natural resources, and has produced 
-    unbalanced growth.
+    Whilst this system helped create modern prosperity by steering resources to 
+    where they could create most financial return, 
+    credit criteria rarely accounted for environmental limits. 
+    As a result, financial wealth expanded through the overuse of natural resources, 
+    leading to unbalanced growth.
   </p>
 
   <p>
-    That tension creates a structural trap: as long as credit targets financial returns alone,
+    This imbalance is in fact a systemic structural flaw: as long as credit targets financial returns alone, 
     ecological overuse is built into the system. Rebalancing the credit agreement
     so that it also requires restoration could shift how the productive economy organises itself.
   </p>
