--- a/solutions.html
+++ b/solutions.html
@@ -16,13 +16,14 @@ as commercial and community finance, linking loans with ecological restoration t
     
     We designed eco-credit products for three major agri-lenders, 
     embedding sustainable practices in loan terms, to show how rebalanced credit 
-    could reshape outcomes. We presented the idea to the World Bank after winning 
-    the Global Innovation Lab for Climate Finance. One large agri-lender piloted the product, 
-    but lessons followed: environmental loan terms are seen as uncompetitive, 
-    board priorities rarely filter down, and monitoring adds complexity. 
+    could reshape outcomes. We presented the idea to the World Bank and world governments after winning 
+    the Global Innovation Lab for Climate Finance. One large agri-lender piloted the approach, 
+    but lessons followed: environmental loan terms are seen as uncompetitive and may undermine other bank KPIs, 
+    board priorities rarely filter down to the branch level, and monitoring adds complexity and cost. 
     Recognising that agri-lenders might individually see eco-credit as an uncompetitive proposition,
-    we hoped that our projects might show the need for all agri-lenders to move to 
-    credit-approaches that recognise environmental value. Broadly, central banks have proved 
+    we theorised that our projects might demonstrate the need for all agri-lenders to move to 
+    credit-approaches that recognise environmental value as a sectoral transition supported by regulation. 
+    However, central banks have broadly proved 
     less keen:  some feel <a href=https://www.bis.org/review/r191029a.htm target="_blank">environmental 
     obligations require a democratic mandate, 
     not the backdoor of bank regulation.</a> Whilst that might be fair, it reveals 
@@ -31,17 +32,16 @@ as commercial and community finance, linking loans with ecological restoration t
     
   </p>
   <p>This suggested the need to trial the approach at 
-    agri-lenders where profit margins are not the objective, hence community eco-credit. </p>
+    agri-lenders where profit margins are not the objective, hence community eco-credit, elaborated below. </p>
 
   <h3>Community Eco-Credit</h3>
   <img src="assets/images/hand.png" alt="Local Finance">
   <p>
     We adapted eco-credit for informal financial self-help groups, which count hundreds of millions, perhaps billions, of members worldwide. 
-    Our focus is groups of 20–30 people with no access to formal finance. Each is capitalised with $1,000–$1,500, held in a simple revolving fund, often a tin box with a padlock. 
+    Our focus is groups of 20–30 people with limited or no access to formal finance. Each is capitalised with $1,000–$1,500, held in a simple revolving fund, often a tin box with a padlock. 
     Members borrow on condition of small environmental actions, like planting trees or adopting sustainable practices. 
     <a href=https://www.greenfi.org/ target="_blank">This is now operated as the Greenfi.org project</a>. The result was catalysing a first wave of green instruments for communities highly dependent on natural resources yet excluded from conventional finance. 
-    These are experimental, and a variety of organisations are experimenting 
-    with local adaptations to the rails for a model we set down and in a growing ecosystem of innovation,
+    These are experimental, and a variety of organisations are trialling local adaptations to the model we set down withing a growing ecosystem of innovation,
     <a href="assets/docs/localgreenfinanceinstruments.pdf" target="_blank">explained in this deck</a>.
   </p>
 
