--- a/problem.html
+++ b/problem.html
@@ -9,7 +9,7 @@ alongside other tools.">
   <h3>At the start of the project, we defined the problem in financial terms</h3>
   <p>
     Environmental management is hard to scale because few want to or are able to meet its full cost. 
-    Soil, forest, and biodiversity investments take years to yield returns and may never do: 
+    Soil, forest, and biodiversity investments take years to yield returns, and may never do so: 
     costs are real and immediate, benefits are future and speculative. 
     These factors contribute to a conservation 
     <a href="https://www.mckinsey.com/~/media/McKinsey/Business%20Functions/Sustainability/Our%20Insights/Taking%20conservation%20finance%20to%20scale/Taking-conservation-finance-to-scale.pdf" 
@@ -18,7 +18,7 @@ alongside other tools.">
     cannot meet the short-term costs of maintaining sustainable environmental systems.
   </p>
   <p>
-    We even found a striking parallel which drove the point “home”. In housing, owners 
+    We found a striking parallel which drove the point “home”. In housing, owners 
     expect to spend 1-4 percent of a home’s 
     value each year on upkeep. Without it, the asset deteriorates. 
     In one sense at least, environmental systems are no different: 
@@ -35,35 +35,39 @@ alongside other tools.">
     productive 
     systems are organised. Simply filling the gap without rethinking production means running down 
     one natural resource to pay for another. A system where oil and gas projects fund sustainable 
-    farming appears illogical. 
+    farming via the tax system appears illogical. 
     
   </p>
   <p>
-    In terms of the "home" metaphor, we're dismantling the house itself to pay for upkeep, 
+    In terms of the "home" metaphor, we're dismantling the house itself to pay for its upkeep, 
     and still falling short. Closing the finance gap without fixing where the funds come 
-    from drains one non-fungible resource to patch another.
+    from drains one non-fungible resource to patch another. It may work on paper, but not in practice.
 
   </p>
   
   
   <h3>A Broader Understanding</h3>
   <p>
-  Ecosystem Equity's focus has been on credit design as both a fundamental driver of and barrier 
-  to unsustainable economies. However, with a focus on farming in implementing pilot projects, 
+  Ecosystem Equity focuses on credit design as both a source of unsustainability and a means to overcome it. 
+  However, with a focus on farming in implementing pilot projects, 
   we encountered over 50 more drivers and barriers (this list is available  
   <a href="docs/barriers.xlsx" target="_blank">here</a>), which often interact in locally 
   specific and unpredictable ways. While it’s challenging to see how these barriers can be 
   recognised and addressed all at once, toolkits are developing that can be deployed with 
   greater precision to meet the many impediments to sustainable resource use. 
 </p>
+
+<p>
   Within these many challenges, one issue is hard to avoid: 
   how society decides which projects and activities receive permission and resources to 
   shape the future. That decision is fundamental. But where that decision sits is, remarkably, 
-  contentious. Banks say governments must regulate, 
-  while governments say solutions must be driven by the private sector. Is the question about what the future looks like 
-  - sustainable or unsustainable -  embedded in the capital allocation mechanism, or in state regulation of economic 
-  activity? 
+  contentious. Banks, and the now defunct Green Financial Alliance for Net Zero, 
+  <a href="https://flow.db.com/more/esg/how-banks-contribute-to-cop-26" target="_blank">say governments must regulate</a>, 
+  while <a href="https://www.bis.org/review/r191029a.htm" target="_blank">central banks push back on a regulatory agenda</a>. 
+  Is the question about what the future looks like – sustainable or unsustainable – 
+  embedded in the capital allocation mechanism, or in state regulation of economic activity?
 </p>
+
 <p>
   Within this deadlock, Ecosystem Equity has sought a third path: asking whether 
   environmental sustainability can deliver financial returns by strengthening environmental 
