Fix barriers PDF formatting and update link

--- a/problem.html
+++ b/problem.html
@@ -51,7 +51,7 @@ alongside other tools.">
   Ecosystem Equity focuses on credit design as both a source of unsustainability and a means to overcome it. 
   However, with a focus on farming in implementing pilot projects, 
   we encountered over 50 more drivers and barriers (this list is available  
-  <a href="docs/barriers.xlsx" target="_blank">here</a>), which often interact in locally 
+  <a href="assets/docs/barriers.pdf" target="_blank">here</a>), which often interact in locally 
   specific and unpredictable ways. While it’s challenging to see how these barriers can be 
   recognised and addressed all at once, toolkits are developing that can be deployed with 
   greater precision to meet the many impediments to sustainable resource use. 
@@ -71,7 +71,8 @@ alongside other tools.">
 <p>
   Within this deadlock, Ecosystem Equity has sought a third path: asking whether 
   environmental sustainability can deliver financial returns by strengthening environmental 
-  resilience and lowering borrowers’ credit risk. This idea proved especially relevant in the farming sector, where we conducted our pilots, 
+  resilience and lowering borrowers’ credit risk. This idea proved especially relevant in the farming sector, 
+  where we conducted our pilots, 
   and has helped us re-envisage what an agri-lender might look like in a sustainable future, 
   as home to a rebalanced credit and capital allocation mechanism for food systems.
 </p>
