--- a/tools.html
+++ b/tools.html
@@ -18,7 +18,7 @@ checklists, monitoring systems, and sector designs to support eco-credit and oth
     <a href="assets/docs/tea.pdf" target="_blank">tea</a>, 
     <a href="assets/docs/coffee.pdf" target="_blank">coffee</a>, 
     <a href="assets/docs/sugar.pdf" target="_blank">sugar</a> and 
-    <a href="assets/docs/potato.pdf" target="_blank">potato</a> sectors. These systems, 
+    <a href="assets/docs/potato.pdf" target="_blank">potato</a> sectors. These systems 
     must overcome social, economic and institutional barriers to implementation, 
     a list of which can be found <a href="assets/docs/barriers.xlsx" target="_blank">here</a>
   </p>
@@ -43,7 +43,7 @@ checklists, monitoring systems, and sector designs to support eco-credit and oth
   <h3>Overview of green financial instruments for self-help groups</h3>
   <p>
     Several organisations now develop green financing tools for informal financial self-help groups. 
-    This document tracks the opportunity and landscape.
+    <a href="assets/docs/barriers.pdf" target="_blank">This document tracks the opportunity and landscape</a>.
   </p>
   <p>
   <a href="#thanks" data-section="thanks" class="cta-link">
