Final paragraph added and text refinements

--- a/insight.html
+++ b/insight.html
@@ -37,10 +37,18 @@
   </p>
 
   <p>
-    We tested what this might mean in the agricultural sector,
-    and how it could inform a re-envisioning of what agri-lenders might look like in a 
-    sustainable future and even <a href="https://github.com/eco-credit/open-impact-earth" target="_blank">built an open-source management 
-      information system to power this future lender.</a> 
+    Whilst our work focuses on the very real economic constraints to sustainability, 
+    we have tried to recognise the view that the roots of economic behaviour lie in consciousness and culture. 
+    This is sometimes framed as an either-or situation, with people taking sides on whether environmental overuse is an 
+    economic or a cultural challenge. Our experience suggests it is not one or the other, but a reflexive relationship: 
+    we shape our economic tools, and they, in turn, shape our understanding of the world. Financial institutions play a 
+    central role in building culture and ideas, our very understanding of nature, and the future itself. 
+    New forms of financial institution will, in turn, shape the pathways toward environmental sustainability.
+  </p>  
+  <p>
+    We believe we have begun to test what this might mean in the agricultural sector, 
+    and how it could inform a re-envisioning of agri-lenders as guardians of both financial 
+    and natural capital.
   </p>
 
   <p>
