Add final credit committee illustration and text updates

--- a/insight.html
+++ b/insight.html
@@ -15,10 +15,10 @@
   </p>
 
   <p>
-    Yet in practice, <strong>credit operates as a de facto licence.</strong> 
+    Yet in practice, credit operates as a de facto licence.
     Access to credit decides which projects are resourced and go ahead. 
-    In that sense, <strong>credit criteria and the committees that apply them determine what 
-    and who is licensed to shape the future</strong>. 
+    In that sense, credit criteria and the committees that apply them determine what 
+    and who is licensed to shape the future. 
     The credit process is therefore fundamental in determining our trajectory towards or away from sustainability.
   </p>
 
@@ -33,9 +33,10 @@
   <p>
     This imbalance is in fact a systemic structural flaw: as long as credit targets financial returns alone, 
     ecological overuse is built into the system. Rebalancing the credit agreement
-    so that it also requires restoration could shift how the productive economy organises itself.
-  </p>
-
+    and work of the credit committee to require restoration could shift how the productive economy organises itself.
+    
+  </p>  
+  <img src="assets/images/creditcommittee.png" alt="Future Bank">
   <p>
     Whilst our work focuses on the very real economic constraints to sustainability, 
     we have tried to recognise the view that the roots of economic behaviour lie in consciousness and culture. 
