Add Eco-Credit Landscape_30092025.pdf

--- a/tools.html
+++ b/tools.html
@@ -43,7 +43,7 @@ checklists, monitoring systems, and sector designs to support eco-credit and oth
   <h3>Overview of green financial instruments for self-help groups</h3>
   <p>
     Several organisations now develop green financing tools for informal financial self-help groups. 
-    <a href="assets/docs/barriers.pdf" target="_blank">This document tracks the opportunity and landscape</a>.
+    <a href="assets/docs/Eco-Credit Landscape_30092025.pdf" target="_blank">This document tracks the opportunity and landscape</a>.
   </p>
   <p>
   <a href="#thanks" data-section="thanks" class="cta-link">
