Add new CSL slide deck

--- a/solutions.html
+++ b/solutions.html
@@ -17,7 +17,8 @@ as commercial and community finance, linking loans with ecological restoration t
     We designed eco-credit products for three major agri-lenders, 
     embedding sustainable practices in loan terms, to show how rebalanced credit 
     could reshape outcomes. We presented the idea to the World Bank and world governments after winning 
-    the Global Innovation Lab for Climate Finance. One large agri-lender piloted the approach, 
+    the Global Innovation Lab for Climate Finance. 
+    <a href="assets/docs/csl.pdf" target="_blank">One large agri-lender piloted the approach</a>, 
     but lessons followed: environmental loan terms are seen as uncompetitive and may undermine other bank KPIs, 
     board priorities rarely filter down to the branch level, and monitoring adds complexity and cost. 
     Recognising that agri-lenders might individually see eco-credit as an uncompetitive proposition,
