--- a/thanks.html
+++ b/thanks.html
@@ -1,8 +1,3 @@
-<title>Ecosystem Equity | Thanks</title>
-<meta name="description" content="Ecosystem Equity thanks its partners and collaborators.">
-
-
-
 <section id="thanks">
   <h2>Thank You</h2>
 
@@ -10,7 +5,8 @@
     This work was undertaken in partnership with several organisations which contributed greatly 
     to its overall direction with either funding, technical expertise or with on-the-ground implementation.
     These organisations include ICRAF, Morgan Stanley UFJ, UNDP, MasterCard Foundation, Partnership for Forests, SwissRE Foundation, 
-    Climate Policy Initiative, MCCC Ltd, COMRED, Rikolto & the Tanzanian Informal Microfinance Association of Practitioners (TIMAP).
+    Climate Policy Initiative, IUCN, MCCC Ltd, Conservation Finance Alliance, COMRED, 
+    Rikolto & the Tanzanian Informal Microfinance Association of Practitioners (TIMAP).
   </p>
 
   <p>
@@ -21,9 +17,7 @@
 
   <p>
     <a href="#contact" data-section="contact" class="arrow-link">
-      Continue to contacts
+      Contact
     </a>
   </p>
-  
-
-
+</section>
