--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@ linking finance to environmental sustainability.">
   <p>
     Ecosystem Equity's work has been recognised with several awards and prizes, 
     including the United Nations/Morgan Stanley Global Prize for Climate 
-    Change Finance Innovation, Climaate Policy Initiatve's Global Innovation Lab for Climate Finance, 
+    Change Finance Innovation, Climaate Policy Initiative's Global Innovation Lab for Climate Finance, 
     a SwissRe ReSource Prize, a Mastercard Zambezi Innovation Prize, 
     a ClimateKIC Award and a Conservation Finance Alliance Prize.
   </p>
