--- a/solutions.html
+++ b/solutions.html
@@ -42,7 +42,7 @@ as commercial and community finance, linking loans with ecological restoration t
     Our focus is groups of 20–30 people with limited or no access to formal finance. Each is capitalised with $1,000–$1,500, held in a simple revolving fund, often a tin box with a padlock. 
     Members borrow on condition of small environmental actions, like planting trees or adopting sustainable practices. 
     <a href=https://www.greenfi.org/ target="_blank">This is now operated as the Greenfi.org project</a>. The result was catalysing a first wave of green instruments for communities highly dependent on natural resources yet excluded from conventional finance. 
-    These are experimental, and a variety of organisations are trialling local adaptations to the model we set down withing a growing ecosystem of innovation,
+    These are experimental, and a variety of organisations are trialling local adaptations to the model we set down within a growing ecosystem of innovation,
     <a href="assets/docs/localgreenfinanceinstruments.pdf" target="_blank">explained in this deck</a>.
   </p>
 
