--- a/solutions.html
+++ b/solutions.html
@@ -28,8 +28,8 @@ as commercial and community finance, linking loans with ecological restoration t
     less keen:  some feel <a href=https://www.bis.org/review/r191029a.htm target="_blank">environmental 
     obligations require a democratic mandate, 
     not the backdoor of bank regulation.</a> Whilst that might be fair, it reveals 
-    the systemic trap: if banks can’t act for reasons of competition, 
-    and governments can’t regulate, we’re in a Catch22 deadlock situation.
+    the systemic trap. Specifically, if banks can’t act for reasons of competition, 
+    and governments can’t regulate, we’re in a "Catch22" deadlock situation.
     
   </p>
   <p>This suggested the need to trial the approach at 
